fix alignment

--- a/src/app/acitivity-list/acitivity-list.component.scss
+++ b/src/app/acitivity-list/acitivity-list.component.scss
@@ -24,3 +24,7 @@
 .activity-list-row.selected {
   border: medium solid var(--gold);
 }
+
+.alignRight {
+  text-align: end;
+}
